--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,30 @@
-name: Run The Tests
+name: Run the Tests
 
 on:
-    push:
-        branches:
-            - master
-    
-    pull_request:
-        branches:
-            - master
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-    build:
-
-        runs-on: ubuntu-latest
-
-        steps:
-        - uses: actions/checkout@v2
-        - name: Set up Python 3.11
-          uses: actions/setup-python@v2
-          with:
-            python-version: 3.11
-        - name: Install dependencies
-          run: |
-            python -m pip install --upgrade pip
-            pip install -r requirements.txt
-
-        - name: Unit Testing
-          run: |
-            cd ciphers_project
-            python3 manage.py test
+  build:
+    
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.11
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+      
+    - name: Unit Testing
+      run: |
+        cd ciphers_project
+        python3 manage.py test
