--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,5 @@ jobs:
     - name: Build and push the image
       run: |
         docker login --username mattpan09 --password ${{secrets.ACCESS_TOKEN}} ghcr.io
-        docker build -t ghcr.io/mattpan09/ciphers-service:latest --file Dockeerfile .
+        docker build -t ghcr.io/mattpan09/ciphers-service:latest --file Dockerfile .
         docker push ghcr.io/mattpan09/ciphers-service:latest
